tests/init_state/error_span/structured_overwrite_without_drop_at_stmt_span.err.expected
error: at 8:17: [INIT-OverwriteWithoutDrop] In function 'f', block 'entry': cannot overwrite 'y': type A is not Drop and the value is still live (consume it via `drop y` first)
   |
 8 |                 y = move a2;
   |                 ^^^^^^^^^^^
