tests/init_state/error_span/structured_overwrite_without_drop_at_stmt_span.sim

            struct A: Move { r: &out i64 }
            extern fn take(a: A);
            fn f(a1: A, a2: A) {
              y: A;
              entry:
                y = move a1;
                y = move a2;
                call take(move y);
                return
            }